--- a/core/config/v2/docs/chains-evm.toml
+++ b/core/config/v2/docs/chains-evm.toml
@@ -45,24 +45,10 @@ LogBackfillBatchSize = 100 # Default
 # **ADVANCED**
 # LogPollInterval works in conjunction with Feature.LogPoller. Controls how frequently the log poller polls for logs. Defaults to the block production rate.
 LogPollInterval = '15s' # Default
-# MaxInFlightTransactions controls how many transactions are allowed to be "in-flight" i.e. broadcast but unconfirmed at any one time. You can consider this a form of transaction throttling.
-#
-# The default is set conservatively at 16 because this is a pessimistic minimum that both geth and parity will hold without evicting local transactions. If your node is falling behind and you need higher throughput, you can increase this setting, but you MUST make sure that your ETH node is configured properly otherwise you can get nonce gapped and your node will get stuck.
-#
-# 0 value disables the limit. Use with caution.
-MaxInFlightTransactions = 16 # Default
-# MaxQueuedTransactions is the maximum number of unbroadcast transactions per key that are allowed to be enqueued before jobs will start failing and rejecting send of any further transactions. This represents a sanity limit and generally indicates a problem with your ETH node (transactions are not getting mined).
-#
-# Do NOT blindly increase this value thinking it will fix things if you start hitting this limit because transactions are not getting mined, you will instead only make things worse.
-#
-# In deployments with very high burst rates, or on chains with large re-orgs, you _may_ consider increasing this.
-#
-# 0 value disables any limit on queue size. Use with caution.
-MaxQueuedTransactions = 250 # Default
+# MinContractPayment is the minimum payment in LINK required to execute a direct request job. This can be overridden on a per-job basis.
+MinContractPayment = '10000000000000 juels' # Default
 # MinIncomingConfirmations is the minimum required confirmations before a log event will be consumed.
 MinIncomingConfirmations = 3 # Default
-# MinimumContractPayment is the minimum payment in LINK required to execute a direct request job. This can be overridden on a per-job basis.
-MinimumContractPayment = '10000000000000 juels' # Default
 # NonceAutoSync enables automatic nonce syncing on startup. Chainlink nodes will automatically try to sync its local nonce with the remote chain on startup and fast forward if necessary. This is almost always safe but can be disabled in exceptional cases by setting this value to false.
 NonceAutoSync = true # Default
 # NoNewHeadsThreshold controls how long to wait after receiving no new heads before `NodePool` marks rpc endpoints as
@@ -83,14 +69,30 @@ RPCDefaultBatchSize = 100 # Default
 # available from the connected node via RPC, due to race conditions in the code of the remote ETH node. In this case you will get false
 # "zero" blocks that are missing transactions.
 RPCBlockQueryDelay = 1 # Default
-# TxReaperInterval controls how often the EthTx reaper will run.
-TxReaperInterval = '1h' # Default
-# TxReaperThreshold indicates how old an EthTx ought to be before it can be reaped.
-TxReaperThreshold = '168h' # Default
-# TxResendAfterThreshold controls how long to wait before re-broadcasting a transaction that has not yet been confirmed.
-TxResendAfterThreshold = '1m' # Default
-# UseForwarders enables or disables sending transactions through forwarder contracts.
-UseForwarders = false # Default
+
+[EVM.Transactions]
+# ForwardersEnabled enables or disables sending transactions through forwarder contracts.
+ForwardersEnabled = false # Default
+# MaxInFlight controls how many transactions are allowed to be "in-flight" i.e. broadcast but unconfirmed at any one time. You can consider this a form of transaction throttling.
+#
+# The default is set conservatively at 16 because this is a pessimistic minimum that both geth and parity will hold without evicting local transactions. If your node is falling behind and you need higher throughput, you can increase this setting, but you MUST make sure that your ETH node is configured properly otherwise you can get nonce gapped and your node will get stuck.
+#
+# 0 value disables the limit. Use with caution.
+MaxInFlight = 16 # Default
+# MaxQueued is the maximum number of unbroadcast transactions per key that are allowed to be enqueued before jobs will start failing and rejecting send of any further transactions. This represents a sanity limit and generally indicates a problem with your ETH node (transactions are not getting mined).
+#
+# Do NOT blindly increase this value thinking it will fix things if you start hitting this limit because transactions are not getting mined, you will instead only make things worse.
+#
+# In deployments with very high burst rates, or on chains with large re-orgs, you _may_ consider increasing this.
+#
+# 0 value disables any limit on queue size. Use with caution.
+MaxQueued = 250 # Default
+# ReaperInterval controls how often the EthTx reaper will run.
+ReaperInterval = '1h' # Default
+# ReaperThreshold indicates how old an EthTx ought to be before it can be reaped.
+ReaperThreshold = '168h' # Default
+# ResendAfterThreshold controls how long to wait before re-broadcasting a transaction that has not yet been confirmed.
+ResendAfterThreshold = '1m' # Default
 
 [EVM.BalanceMonitor]
 # Enabled balance monitoring for all keys.
@@ -137,16 +139,6 @@ PriceMin = '1 gwei' # Default
 LimitDefault = 500_000 # Default
 # LimitMax sets a maximum for _estimated_ gas limits. This currently only applies to `Arbitrum` `GasEstimatorMode`.
 LimitMax = 500_000 # Default
-# LimitOCRJobType overrides LimitDefault for OCR jobs.
-LimitOCRJobType = 100_000 # Example
-# LimitDRJobType overrides LimitDefault for Direct Request jobs.
-LimitDRJobType = 100_000 # Example
-# LimitVRFJobType overrides LimitDefault for VRF jobs.
-LimitVRFJobType = 100_000 # Example
-# LimitFMJobType overrides LimitDefault for Flux Monitor jobs.
-LimitFMJobType = 100_000 # Example
-# LimitKeeperJobType overrides LimitDefault for Keeper jobs.
-LimitKeeperJobType = 100_000 # Example
 # LimitMultiplier is the factor by which a transaction's GasLimit is multiplied before transmission. So if the value is 1.1, and the GasLimit for a transaction is 10, 10% will be added before transmission.
 #
 # This factor is always applied, so includes Optimism L2 transactions which uses a default gas limit of 1 and is also applied to `LimitDefault`.
@@ -215,7 +207,19 @@ TipCapDefault = '1 wei' # Default
 # TipCapMinimum is the minimum gas tip to use when submitting transactions to the blockchain.
 #
 # Only applies to EIP-1559 transactions)
-TipCapMinimum = '1 wei' # Default
+TipCapMin = '1 wei' # Default
+
+[EVM.GasEstimator.LimitJobType]
+# OCR overrides LimitDefault for OCR jobs.
+OCR = 100_000 # Example
+# DR overrides LimitDefault for Direct Request jobs.
+DR = 100_000 # Example
+# VRF overrides LimitDefault for VRF jobs.
+VRF = 100_000 # Example
+# FM overrides LimitDefault for Flux Monitor jobs.
+FM = 100_000 # Example
+# Keeper overrides LimitDefault for Keeper jobs.
+Keeper = 100_000 # Example
 
 
 # These settings allow you to configure how your node calculates gas prices when using the block history estimator.
