--- a/core/config/v2/docs/core.toml
+++ b/core/config/v2/docs/core.toml
@@ -23,16 +23,16 @@ DefaultIdleInTxSessionTimeout = '1h' # Default
 DefaultLockTimeout = '15s' # Default
 # DefaultQueryTimeout is the maximum time allowed for standard queries before timing out.
 DefaultQueryTimeout = '10s' # Default
+# MaxIdleConns configures the maximum number of idle database connections that the Chainlink node will keep open. Think of this as the baseline number of database connections per Chainlink node instance. Increasing this number can help to improve performance under database-heavy workloads.
+#
+# Postgres has connection limits, so you must use cation when increasing this value. If you are running several instances of a Chainlink node or another application on a single database server, you might run out of Postgres connection slots if you raise this value too high.
+MaxIdleConns = 10 # Default
+# MaxOpenConns configures the maximum number of database connections that a Chainlink node will have open at any one time. Think of this as the maximum burst upper bound limit of database connections per Chainlink node instance. Increasing this number can help to improve performance under database-heavy workloads.
+#
+# Postgres has connection limits, so you must use cation when increasing this value. If you are running several instances of a Chainlink node or another application on a single database server, you might run out of Postgres connection slots if you raise this value too high.
+MaxOpenConns = 20 # Default
 # MigrateOnStartup controls whether a Chainlink node will attempt to automatically migrate the database on boot. If you want more control over your database migration process, set this variable to `false` and manually migrate the database using the CLI `migrate` command instead.
 MigrateOnStartup = true # Default
-# ORMMaxIdleConns configures the maximum number of idle database connections that the Chainlink node will keep open. Think of this as the baseline number of database connections per Chainlink node instance. Increasing this number can help to improve performance under database-heavy workloads.
-#
-# Postgres has connection limits, so you must use cation when increasing this value. If you are running several instances of a Chainlink node or another application on a single database server, you might run out of Postgres connection slots if you raise this value too high.
-ORMMaxIdleConns = 10 # Default
-# ORMMaxOpenConns configures the maximum number of database connections that a Chainlink node will have open at any one time. Think of this as the maximum burst upper bound limit of database connections per Chainlink node instance. Increasing this number can help to improve performance under database-heavy workloads.
-#
-# Postgres has connection limits, so you must use cation when increasing this value. If you are running several instances of a Chainlink node or another application on a single database server, you might run out of Postgres connection slots if you raise this value too high.
-ORMMaxOpenConns = 20 # Default
 
 # As a best practice, take regular database backups in case of accidental data loss. This best practice is especially important when you upgrade your Chainlink node to a new version. Chainlink nodes support automated database backups to make this process easier.
 #
@@ -110,9 +110,15 @@ UseBatchSend = true # Default
 DatabaseQueries = false # Default
 # JSONConsole enables JSON logging. Otherwise, the log is saved in a human-friendly console format.
 JSONConsole = false # Default
-# FileDir sets the log directory. By default, Chainlink nodes write log data to `$ROOT/log.jsonl`.
-FileDir = '/my/log/directory' # Example
-# FileMaxSize determines the log file's max size in megabytes before file rotation. Having this not set will disable logging to disk. If your disk doesn't have enough disk space, the logging will pause and the application will log errors until space is available again.
+# UnixTS enables legacy unix timestamps.
+#
+# Previous versions of Chainlink nodes wrote JSON logs with a unix timestamp. As of v1.1.0 and up, the default has changed to use ISO8601 timestamps for better readability.
+UnixTS = false # Default
+
+[Log.File]
+# Dir sets the log directory. By default, Chainlink nodes write log data to `$ROOT/log.jsonl`.
+Dir = '/my/log/directory' # Example
+# MaxSize determines the log file's max size in megabytes before file rotation. Having this not set will disable logging to disk. If your disk doesn't have enough disk space, the logging will pause and the application will log errors until space is available again.
 #
 # Values must have suffixes with a unit like: `5120mb` (5,120 megabytes). If no unit suffix is provided, the value defaults to `b` (bytes). The list of valid unit suffixes are:
 #
@@ -121,15 +127,11 @@ FileDir = '/my/log/directory' # Example
 # - mb (megabytes)
 # - gb (gigabytes)
 # - tb (terabytes)
-FileMaxSize = '5120mb' # Default
-# FileMaxAgeDays determines the log file's max age in days before file rotation. Keeping this config with the default value will not remove log files based on age.
-FileMaxAgeDays = 0 # Default
-# FileMaxBackups determines the maximum number of old log files to retain. Keeping this config with the default value retains all old log files. The `FileMaxAgeDays` variable can still cause them to get deleted.
-FileMaxBackups = 1 # Default
-# UnixTS enables legacy unix timestamps.
-#
-# Previous versions of Chainlink nodes wrote JSON logs with a unix timestamp. As of v1.1.0 and up, the default has changed to use ISO8601 timestamps for better readability.
-UnixTS = false # Default
+MaxSize = '5120mb' # Default
+# MaxAgeDays determines the log file's max age in days before file rotation. Keeping this config with the default value will not remove log files based on age.
+MaxAgeDays = 0 # Default
+# MaxBackups determines the maximum number of old log files to retain. Keeping this config with the default value retains all old log files. The `MaxAgeDays` variable can still cause them to get deleted.
+MaxBackups = 1 # Default
 
 [WebServer]
 # AllowOrigins controls the URLs Chainlink nodes emit in the `Allow-Origins` header of its API responses. The setting can be a comma-separated list with no spaces. You might experience CORS issues if this is not set correctly.
@@ -185,10 +187,6 @@ HTTPSPort = 6689 # Default
 ForceRedirect = false # Default
 
 [JobPipeline]
-# HTTPRequestMaxSize defines the maximum size for HTTP requests and responses made by `http` and `bridge` adapters.
-HTTPRequestMaxSize = '32768' # Default
-# DefaultHTTPRequestTimeout defines the default timeout for HTTP requests made by `http` and `bridge` adapters.
-DefaultHTTPRequestTimeout = '15s' # Default
 # ExternalInitiatorsEnabled enables the External Initiator feature. If disabled, `webhook` jobs can ONLY be initiated by a logged-in user. If enabled, `webhook` jobs can be initiated by a whitelisted external initiator.
 ExternalInitiatorsEnabled = false # Default
 # MaxRunDuration is the maximum time allowed for a single job run. If it takes longer, it will exit early and be marked errored. If set to zero, disables the time limit completely.
@@ -202,6 +200,12 @@ ReaperThreshold = '24h' # Default
 # **ADVANCED**
 # ResultWriteQueueDepth controls how many writes will be buffered before subsequent writes are dropped, for jobs that write results asynchronously for performance reasons, such as OCR.
 ResultWriteQueueDepth = 100 # Default
+
+[JobPipeline.HTTPRequest]
+# DefaultTimeout defines the default timeout for HTTP requests made by `http` and `bridge` adapters.
+DefaultTimeout = '15s' # Default
+# MaxSize defines the maximum size for HTTP requests and responses made by `http` and `bridge` adapters.
+MaxSize = '32768' # Default
 
 [FluxMonitor]
 # **ADVANCED**
@@ -383,23 +387,8 @@ GasTipCapBufferPercent = 20 # Default
 # BaseFeeBufferPercent specifies the percentage to add to the base fee used for checking whether to perform an upkeep. Applies only in EIP-1559 mode.
 BaseFeeBufferPercent = 20 # Default
 # **ADVANCED**
-# MaximumGracePeriod is the maximum number of blocks that a keeper will wait after performing an upkeep before it resumes checking that upkeep
-MaximumGracePeriod = 100 # Default
-# **ADVANCED**
-# RegistryCheckGasOverhead is the amount of extra gas to provide checkUpkeep() calls to account for the gas consumed by the keeper registry.
-RegistryCheckGasOverhead = 200_000 # Default
-# **ADVANCED**
-# RegistryPerformGasOverhead is the amount of extra gas to provide performUpkeep() calls to account for the gas consumed by the keeper registry
-RegistryPerformGasOverhead = 300_000 # Default
-# **ADVANCED**
-# RegistrySyncInterval is the interval in which the RegistrySynchronizer performs a full sync of the keeper registry contract it is tracking.
-RegistrySyncInterval = '30m' # Default
-# **ADVANCED**
-# RegistryMaxPerformDataSize is the max size of perform data.
-RegistryMaxPerformDataSize = 5_000 # Default
-# **ADVANCED**
-# RegistrySyncUpkeepQueueSize represents the maximum number of upkeeps that can be synced in parallel.
-RegistrySyncUpkeepQueueSize = 10 # Default
+# MaxGracePeriod is the maximum number of blocks that a keeper will wait after performing an upkeep before it resumes checking that upkeep
+MaxGracePeriod = 100 # Default
 # TurnLookBack is the number of blocks in the past to look back when getting a block for a turn.
 TurnLookBack = 1_000 # Default
 # TurnFlagEnabled enables a new algorithm for how keepers take turns.
@@ -407,6 +396,23 @@ TurnFlagEnabled = false # Default
 # **ADVANCED**
 # UpkeepCheckGasPriceEnabled includes gas price in calls to `checkUpkeep()` when set to `true`.
 UpkeepCheckGasPriceEnabled = false # Default
+
+[Keeper.Registry]
+# **ADVANCED**
+# CheckGasOverhead is the amount of extra gas to provide checkUpkeep() calls to account for the gas consumed by the keeper registry.
+CheckGasOverhead = 200_000 # Default
+# **ADVANCED**
+# PerformGasOverhead is the amount of extra gas to provide performUpkeep() calls to account for the gas consumed by the keeper registry
+PerformGasOverhead = 300_000 # Default
+# **ADVANCED**
+# SyncInterval is the interval in which the RegistrySynchronizer performs a full sync of the keeper registry contract it is tracking.
+SyncInterval = '30m' # Default
+# **ADVANCED**
+# MaxPerformDataSize is the max size of perform data.
+MaxPerformDataSize = 5_000 # Default
+# **ADVANCED**
+# SyncUpkeepQueueSize represents the maximum number of upkeeps that can be synced in parallel.
+SyncUpkeepQueueSize = 10 # Default
 
 # The Chainlink node is equipped with an internal "nurse" service that can perform automatic `pprof` profiling when the certain resource thresholds are exceeded, such as memory and goroutine count. These profiles are saved to disk to facilitate fine-grained debugging of performance-related issues. In general, if you notice that your node has begun to accumulate profiles, forward them to the Chainlink team.
 #
