--- a/core/chains/evm/config/v2/defaults/Optimism_Goerli.toml
+++ b/core/chains/evm/config/v2/defaults/Optimism_Goerli.toml
@@ -5,7 +5,7 @@ LinkContractAddress = '0xdc2CC710e42857672E7907CF474a69B63B93089f'
 MinIncomingConfirmations = 1
 NoNewHeadsThreshold = '0'
 OCR.ContractConfirmations = 1
-TxResendAfterThreshold = '15s'
+Transactions.ResendAfterThreshold = '15s'
 
 [BalanceMonitor]
 Enabled = true
