--- a/core/chains/evm/config/v2/defaults/Optimism_Kovan.toml
+++ b/core/chains/evm/config/v2/defaults/Optimism_Kovan.toml
@@ -5,7 +5,7 @@ LinkContractAddress = '0x4911b761993b9c8c0d14Ba2d86902AF6B0074F5B'
 MinIncomingConfirmations = 1
 NoNewHeadsThreshold = '0'
 OCR.ContractConfirmations = 1
-TxResendAfterThreshold = '15s'
+Transactions.ResendAfterThreshold = '15s'
 
 [BalanceMonitor]
 Enabled = true
