--- a/core/chains/evm/config/v2/defaults/Polygon_Mainnet.toml
+++ b/core/chains/evm/config/v2/defaults/Polygon_Mainnet.toml
@@ -4,14 +4,16 @@ ChainID = '137'
 FinalityDepth = 500
 LinkContractAddress = '0xb0897686c545045aFc77CF20eC7A532E3120E0F1'
 LogPollInterval = '1s'
-# Since re-orgs on Polygon can be so large, we need a large safety buffer to allow time for the queue to clear down before we start dropping transactions
-MaxQueuedTransactions = 5000
 MinIncomingConfirmations = 5
 NoNewHeadsThreshold = '30s'
 # Must be set to something large here because Polygon has so many re-orgs that otherwise we are constantly refetching
 RPCBlockQueryDelay = 10
+
+[Transactions]
 # Matic nodes under high mempool pressure are liable to drop txes, we need to ensure we keep sending them
-TxResendAfterThreshold = '1m'
+ResendAfterThreshold = '1m'
+# Since re-orgs on Polygon can be so large, we need a large safety buffer to allow time for the queue to clear down before we start dropping transactions
+MaxQueued = 5000
 
 [BalanceMonitor]
 Enabled = true
