--- a/core/chains/evm/config/v2/defaults/fallback.toml
+++ b/core/chains/evm/config/v2/defaults/fallback.toml
@@ -3,18 +3,20 @@ BlockBackfillSkip = false
 FinalityDepth = 50
 LogBackfillBatchSize = 100
 LogPollInterval = '15s'
-MaxInFlightTransactions = 16
-MaxQueuedTransactions = 250
+MinContractPayment = '.00001 link'
 MinIncomingConfirmations = 3
-MinimumContractPayment = '.00001 link'
 NonceAutoSync = true
 NoNewHeadsThreshold = '3m'
 RPCDefaultBatchSize = 100
 RPCBlockQueryDelay = 1
-TxReaperInterval = '1h'
-TxReaperThreshold = '168h'
-TxResendAfterThreshold = '1m'
-UseForwarders = false
+
+[Transactions]
+ForwardersEnabled = false
+MaxInFlight = 16
+MaxQueued = 250
+ReaperInterval = '1h'
+ReaperThreshold = '168h'
+ResendAfterThreshold = '1m'
 
 [BalanceMonitor]
 Enabled = true
@@ -35,7 +37,7 @@ BumpTxDepth = 10
 EIP1559DynamicFees = false
 FeeCapDefault = '100 gwei'
 TipCapDefault = '1'
-TipCapMinimum = '1'
+TipCapMin = '1'
 
 [GasEstimator.BlockHistory]
 BatchSize = 4
