Fix hardhat version to ~2.10

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -61,7 +61,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.3.1",
-    "hardhat": "^2.10.1",
+    "hardhat": "~2.10.1",
     "hardhat-abi-exporter": "^2.2.1",
     "hardhat-contract-sizer": "^2.5.1",
     "moment": "^2.29.4",
