--- a/contracts/package.json
+++ b/contracts/package.json
@@ -78,7 +78,7 @@
   },
   "dependencies": {
     "@eth-optimism/contracts": "^0.5.21",
-    "@openzeppelin/contracts": "^4.3.3",
+    "@openzeppelin/contracts": "~4.3.3",
     "@openzeppelin/contracts-v0.7": "npm:@openzeppelin/contracts@v3.4.2"
   }
 }
