--- a/.github/workflows/solidity.yml
+++ b/.github/workflows/solidity.yml
@@ -109,12 +109,10 @@ jobs:
           prod: "true"
       - name: Setup Go
         uses: ./.github/actions/setup-go
-      - name: Test native compilation
-        run: ./contracts/scripts/native_solc_compile_all
+      - name: Run native compile and generate wrappers
+        run: make go-solidity-wrappers
       - name: Verify local solc binaries
         run: ./tools/ci/check_solc_hashes
-      - name: Generate Go Wrappers
-        run: go generate ./core/gethwrappers
       - name: Display git diff
         run: git diff --minimal
 
