--- a/contracts/package.json
+++ b/contracts/package.json
@@ -25,22 +25,18 @@
   ],
   "pnpm": {
     "_comment": "See https://github.com/ethers-io/ethers.js/discussions/2849#discussioncomment-2696454",
+    "_comment2_logger": "See https://github.com/ethers-io/ethers.js/issues/379 we pin this version since that's what was used in the old yarn lockfile",
     "overrides": {
-      "ethers": "5.6.1",
-      "@ethersproject/abi": "5.6.1",
-      "@ethersproject/bignumber": "5.6.1",
-      "@ethersproject/contracts": "5.6.1",
-      "@ethersproject/providers": "5.6.1",
-      "@ethersproject/random": "5.6.1"
+      "@ethersproject/logger": "5.0.6"
     }
   },
   "devDependencies": {
     "@ethereum-waffle/mock-contract": "^3.3.0",
-    "@ethersproject/abi": "^5.6.0",
-    "@ethersproject/bignumber": "^5.6.0",
-    "@ethersproject/contracts": "^5.6.0",
-    "@ethersproject/providers": "^5.6.1",
-    "@ethersproject/random": "^5.6.0",
+    "@ethersproject/abi": "~5.6.0",
+    "@ethersproject/bignumber": "~5.6.0",
+    "@ethersproject/contracts": "~5.6.0",
+    "@ethersproject/providers": "~5.6.1",
+    "@ethersproject/random": "~5.6.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
@@ -60,7 +56,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.3.1",
+    "ethers": "~5.6.0",
     "hardhat": "~2.10.1",
     "hardhat-abi-exporter": "^2.2.1",
     "hardhat-contract-sizer": "^2.5.1",
