--- a/.github/workflows/build_external.yml
+++ b/.github/workflows/build_external.yml
@@ -30,15 +30,20 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-      - name: Build Image
-        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/build-image@1f3c81b148e53caaa0563f8963f884f0e5a4f82d # v2.0.15
+      - name: Checkout Chainlink repo
+        uses: actions/checkout@v3
         with:
-          cl_repo: smartcontractkit/chainlink
-          cl_ref: ${{ github.sha }}
-          dep_relay_sha: ${{ github.event.pull_request.head.sha }}
-          push_tag: ${{ secrets.QA_AWS_ACCOUNT_NUMBER }}.dkr.ecr.${{ secrets.QA_AWS_REGION }}.amazonaws.com/chainlink:latest.${{ github.sha }}
-          QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
-          QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
+          repository: smartcontractkit/chainlink
+          ref: develop
+      - name: Replace chainlink-relay deps
+        run: go get github.com/smartcontractkit/chainlink-relay@${{ github.event.pull_request.head.sha }}
+      - name: Build Image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: core/chainlink.Dockerfile
+          build-args: COMMIT_SHA=${{ github.sha }}
+          push: false
   solana-build-relay:
     environment: integration
     permissions:
@@ -69,7 +74,9 @@ jobs:
       - name: Replace chainlink-relay deps
         run: go get github.com/smartcontractkit/chainlink-relay@${{ github.event.pull_request.head.sha }}
       - name: Install Solana CLI
-        run: make test_install_ci
+        run: |
+            cat go.mod
+            make test_install_ci
       - name: Build & Test
         run: make test_relay_unit
   starknet-build-relay:
