--- a/.github/workflows/build_external.yml
+++ b/.github/workflows/build_external.yml
@@ -2,7 +2,7 @@
 # NOTE: This is not a required check to merge, merely a check so you know to create tickets to update the products that rely on this.
 name: Build External Repositories
 on:
-  pull_request:
+  push:
 
 # Only run 1 of this workflow at a time per PR
 concurrency:
